refact : 배열에서 리스트로 수정